--- a/nodejs/mman/nav.html
+++ b/nodejs/mman/nav.html
@@ -36,7 +36,7 @@
                         <a href="part1.html#looking-at-myself">Looking at myself</a>
                     </li>
                     <li>
-                        <a href="part1.html#birth pain">Birth pain</a>
+                        <a href="part1.html#birth-pain">Birth pain</a>
                     </li>
                     <li>
                         <a href="part1.html#orientation">Orientation</a>
@@ -45,7 +45,7 @@
                         <a href="part1.html#visiting-relatives">Visiting relatives</a>
                     </li>
                     <li>
-                        <a href="part1.html#cheap-way to-travel">Cheap way to travel</a>
+                        <a href="part1.html#cheap-way-to-travel">Cheap way to travel</a>
                     </li>
                     <li>
                         <a href="part1.html#unlimited-freedom">Unlimited freedom</a>
@@ -63,7 +63,7 @@
                         <a href="part1.html#traveling-down">Traveling down memory lane</a>
                     </li>
                     <li>
-                        <a href="part1.html#how-real-are    ">How real are people?</a>
+                        <a href="part1.html#how-real-are-people">How real are people?</a>
                     </li>
                     <li>
                         <a href="part1.html#meeting-dreamers">Meeting dreamers in a beautiful dream</a>
