--- a/nodejs/mman/introduction.html
+++ b/nodejs/mman/introduction.html
@@ -15,71 +15,70 @@
 
         <p>
           Trying to write about something that can neither be backed up by
-          scientificproof nor sound collaborating evidence, especially when it
-          deals with therealms of the mind, opens the possibility for doubt or
-          (quite likely) ridicule.But rather than waste space asserting the
-          existence of another dimensionwhere life continues after death and
-          which we can visit whilst still alive,would like to refer the skeptics
-          to the vast collection of current literaturewhich argues the point for
-          me. I simply want to share my adventures andclaim boldly that they
-          have taken place in other dimensions - dimensionswhich lie at the very
-          heart of our existence, whether we realise it or not. Thisclaim will
+          scientific proof nor sound collaborating evidence, especially when it
+          deals with the realms of the mind, opens the possibility for doubt or
+          (quite likely) ridicule. But rather than waste space asserting the
+          existence of another dimension where life continues after death and
+          which we can visit whilst still alive.
+          I would like to refer the skeptics
+          to the vast collection of current literature which argues the point for
+          me. I simply want to share my adventures and claim boldly that they
+          have taken place in other dimensions - dimensions which lie at the very
+          heart of our existence, whether we realise it or not. This claim will
           make more sense as you read further through these journals.
         </p>
         <p>
           The records in this book have been compiled over a period of
-          nearlyforty years and deal exclusively with a novel form of
-          out-of-body experience,which I believe is a natural byproduct of
+          nearly forty years and deal exclusively with a novel form of
+          out-of-body experience, which I believe is a natural byproduct of
           regular and intensive meditation.
         </p>
         <p>
           I am encouraged by the fact that scientists are coming round to the
-          ideathat there must be other dimensions (at least another eleven
-          according tosome string theorists), in order to explain our physical
-          existences. Alsoencouraging is the fact that research focuses
-          increasingly on the subatomicworld and quantum world - because of the
-          increasingly higher prizes theyyield, but also because of the
-          increasing attention that is being placed onresearch into the
+          idea that there must be other dimensions (at least another eleven
+          according to some string theorists), in order to explain our physical
+          existences. Also encouraging is the fact that research focuses
+          increasingly on the subatomic world and quantum world - because of the
+          increasingly higher prizes they yield, but also because of the
+          increasing attention that is being placed on research into the
           phenomena of consciousness.
         </p>
         <p>
           Alas, I am no scientist. I am an artist by trade. Having made my
-          markas a fantasy artist it would be easy to conclude that this book is
-          simply theresult of a fertile imagination. In fact it is the other way
-          round. My passionwas for abstract art until the late eighties, my
-          fantasy work was inspired by
+          mark as a fantasy artist it would be easy to conclude that this book is
+          simply the result of a fertile imagination. In fact it is the other way
+          round. My passion was for abstract art until the late eighties, my
+          fantasy work was inspired by what I found when visiting other worlds
+          when out of my body.
         </p>
-        <p>— what I found when visiting other worlds when out of my body.</p>
         <p>
           The images I created inspired many publishers to commission me
-          for‘book covers: for science fiction, mythology, dreams,
-          mind-body-spirit - evenangels and fairies (which I always regarded
-          more as powerful archetypes
-        </p>
-        <p>
-          7, than objective reality, as Lhad never come across any of these
-          creatures).Although I have a very open mind and respect some mediums
-          who are ableto break the barriers of our physical perception, readers
-          should not concludethat I am anew age evangelist. Far from it. My
-          livelihood is earned running asixty-hour-a-week business in a tough
-          commercial advertising environment,which has made me a very practical
-          person. I don’t subscribe to beliefsystems other than what I
+          for book covers: for science fiction, mythology, dreams,
+          mind-body-spirit - even angels and fairies (which I always regarded
+          more as powerful archetypes than objective reality, as I had never
+          come across any of these creatures).
+          Although I have a very open mind and respect some mediums
+          who are able to break the barriers of our physical perception, readers
+          should not conclude that I am a new age evangelist. Far from it. My
+          livelihood is earned running a sixty-hour-a-week business in a tough
+          commercial advertising environment, which has made me a very practical
+          person. I don’t subscribe to belief systems other than what I
           experience personally. I don’t follow a philosophyor religion. I
           neither believe nor disbelieve in God.
         </p>
         <p>
           Despite my busy life-style, finding a couple of hours per day
           formeditation has always been my priority for the last forty years. If
-          I were tocompress the time spent in meditation together in one big
-          lump, I wouldhave been away for a whole three years, residing in a
-          state of consciousnesswhich is radically different from what we
-          experience normally in our dailywaking lives.
+          I were to compress the time spent in meditation together in one big
+          lump, I would have been away for a whole three years, residing in a
+          state of consciousnessw hich is radically different from what we
+          experience normally in our daily waking lives.
         </p>
         <p>
           It is only too obvious that such intensive practice has affected my
-          mindin the same way that two hours at the gym every day would have had
-          aneffect on my body! It is this practice to which I attribute the
-          experiences laidout in these journals.
+          mind in the same way that two hours at the gym every day would have had
+          an effect on my body! It is this practice to which I attribute the
+          experiences laid out in these journals.
         </p>
         <p>
           Regular and deep meditation has provided me with focusing power,
@@ -88,71 +87,65 @@
         </p>
         <p>
           Most importantly, I have always regarded meditation as a process of
-        </p>
-        <p>
-          » unlocking the deeper mysteries of the reality of self and who I am.
-          I havenever pursued it as a means of leaving my body. Most experiences
-          recordedhere, with a few exceptions, were spontanegus, and I have yet
-          to succeed indeveloping a technique to guarantee deliberate conscious
+          unlocking the deeper mysteries of the reality of self and who I am.
+          I have never pursued it as a means of leaving my body. Most experiences
+          recorded here, with a few exceptions, were spontaneous, and I have yet
+          to succeed in developing a technique to guarantee deliberate conscious
           projection
-        </p>
-        <p>
           consistently. But this is unlikely to happen. I see meditation as a
-          means toattain loftier goals than this.
+          means to attain loftier goals than this.
         </p>
         <p>
           I have only recorded experiences where I was in full
-          wakingconsciousness. Dreams, however vivid, did not qualify as
-          relevant. I had tohave full control over all my faculties as in waking
-          life, ie. identity of self;awareness that I was out of my body and an
-          awareness of where my physicalbody was at the time and its social
-          identity; full powers of discrimination;full control over decision
-          making; and awareness of all my senses. In short,the same criteria of
-          waking consciousness as experienced in waking life.‘These experiences
-          are not visions, dreams, fantasies or imaginations, but realwaking
+          waking consciousness. Dreams, however vivid, did not qualify as
+          relevant. I had to have full control over all my faculties as in waking
+          life, ie. identity of self; awareness that I was out of my body and an
+          awareness of where my physical body was at the time and its social
+          identity; full powers of discrimination; full control over decision
+          making; and awareness of all my senses. In short, the same criteria of
+          waking consciousness as experienced in waking life. These experiences
+          are not visions, dreams, fantasies or imaginations, but real waking
           experiences.
         </p>
         <p>
           In some instances the waking consciousness was so authentic that
-          therewas literally no break in consciousness when returning from the
-          higherdimension to the physical environment. All I had to do was to
-          open myeyelids. It was like blinking while walking from one room to
-          the next. Thedimensions are so incredibly close and interconnected
-          that they can benavigated in an instant without a break in
-          consciousness. Most of the timethough, I paused before opening my eyes
-          to run through the events in orderto impress them on the physical
-          brain, Without this process of rehearsing andrecollection the memory
-          would be lost. In those cases the only thing broughtacross would be a
-          sense of having been lucid, but with little or no recollectionof the
+          there was literally no break in consciousness when returning from the
+          higher dimension to the physical environment. All I had to do was to
+          open my eyelids. It was like blinking while walking from one room to
+          the next. The dimensions are so incredibly close and interconnected
+          that they can be navigated in an instant without a break in
+          consciousness. Most of the time though, I paused before opening my eyes
+          to run through the events in order to impress them on the physical
+          brain, Without this process of rehearsing and recollection the memory
+          would be lost. In those cases the only thing brought across would be a
+          sense of having been lucid, but with little or no recollection of the
           experiences in the next dimension.
         </p>
         <p>
           The events in this book are not reproduced in chronological order,
-          butthe order was rearranged to favour the narrative format. I hope
-          this helps toput the experiences across in a more logical format,
-          which makes it easier torelate to. In reality, states of consciousness
-          do not follow the laws of time ordevelopment but are dependent on
-          psychological conditions,
+          but the order was rearranged to favour the narrative format. I hope
+          this helps to put the experiences across in a more logical format,
+          which makes it easier to relate to. In reality, states of consciousness
+          do not follow the laws of time or development but are dependent on
+          psychological conditions.
         </p>
         <p>
           The reader will also notice that there is a gap of twenty years in
-          myjournal entries. The reason for this is that my attention was
-          increasinglydiverted towards building a career and to supporting my
-          family. Although Ikept my meditation practice up during this time, I
-          was more concerned withfocusing on the here-now reality and to coping
+          my journal entries. The reason for this is that my attention was
+          increasingly diverted towards building a career and to supporting my
+          family. Although I kept my meditation practice up during this time, I
+          was more concerned with focusing on the here-now reality and to coping
           with the pressures of anactive working life. I still manifested
-          out-of-body experiences, though theywere rare and not recorded. It was
+          out-of-body experiences, though they were rare and not recorded. It was
           like being a tourist without a camera,
-        </p>
-        <p>
           though they still added in general terms to completing a picture of
-          the higherdimension.
+          the higherd imension.
         </p>
         <p>
-          llIna sense this book is not just about out-of-body experiences, but
-          alsoabout a voyage of self discovery, the realisation of sovereignty,
-          personalfreedom, independence from belief systems, and the attainment
-          of states ofconsciousness which go beyond everyday awareness.
+          In a sense this book is not just about out-of-body experiences, but
+          also about a voyage of self discovery, the realisation of sovereignty,
+          personal freedom, independence from belief systems, and the attainment
+          of states of consciousness which go beyond everyday awareness.
         </p>
         <p>
           I feel it is important that information gathered in alternate states
@@ -161,35 +154,33 @@
           and perhapsthe underlying mechanics of the physical universe.
         </p>
         <p>
-          Tam convinced that separation from the body happens to all of us at
-        </p>
-        <p>
-          = night and that we draw from other dimensions every waking minute of
-          ourlives. I also believe that separation from the body takes place at
+          I am convinced that separation from the body happens to all of us at
+          night and that we draw from other dimensions every waking minute of
+          our lives. I also believe that separation from the body takes place at
           a subatomic —rather than molecular level, and if scientists were to
-          have similar privilegesas I have, I am sure their
-          scientifically-conditioned enquiries would unravelinsights into the
+          have similar privileges as I have, I am sure their
+          scientifically-conditioned enquiries would unravel insights into the
           mechanics of creation that would set the world alight!
         </p>
         <p>
           I can imagine that when they have reached the physical limitations
-          ofbuilding increasingly large particle accelerators in order to
-          penetrate themysteries of the atom, scientists may well opt for
-          alternative means ofresearch and converge with scientists from other
-          disciplines - for exampleStanford University Professor Stephen
-          LaBerge!, who investigates thephenomena of lucid dreaming. As a
-          scientist, he restricts his research to therealms of dreams and
-          consciousness rather that hypothesising about otherdimensions, which
-          he would be unable to prove. As an artist, I have no suchrestrictions,
+          of building increasingly large particle accelerators in order to
+          penetrate the mysteries of the atom, scientists may well opt for
+          alternative means of research and converge with scientists from other
+          disciplines - for example Stanford University Professor Stephen
+          LaBerge, who investigates the phenomena of lucid dreaming. As a
+          scientist, he restricts his research to the realms of dreams and
+          consciousness rather that hypothesising about other dimensions, which
+          he would be unable to prove. As an artist, I have no such restrictions,
           hence I would like to suggest that we live in a
-          multi-dimensionaluniverse, which we can visit simply by walking
-          through the right doors inour mind.
+          multi-dimensional universe, which we can visit simply by walking
+          through the right doors in our mind.
         </p>
         <p>
-          T hope you will enjoy reading these travel journals for what they
-          are,and with an open mind.
+          I hope you will enjoy reading these travel journals for what they
+          are, and with an open mind.
         </p>
-        <p>11980, Author of “Exploring the World of Lucid Dreaming”</p>
+        <small>1 1980, Author of “Exploring the World of Lucid Dreaming”</small>
       </section>
     </article>
   </body>
