--- a/nodejs/mman/part1.html
+++ b/nodejs/mman/part1.html
@@ -24,21 +24,21 @@
         <h4>Germany, August the 14th 1975</h4>
 
         <p>
-          It was very unusual for me to look at my mother’s garden before firstsaying
-          hello to her on one of my rare visits. But today was different.‘The first
-          thing I noticed was the red beech tree, which my mother hadplanted nearly
-          twenty years earlier when we had moved into the newhouse. I had never
-          remembered it looking quite as vigorous, so full ofenergy. Today it appeared
-          to_have a presence about it which wasdifficult to ignore. Charisma may be the
-          wrong word, but that waswhat it felt like. I couldn't resist getting up very
-          close and touching itsbark.
+          It was very unusual for me to look at my mother’s garden before first saying
+          hello to her on one of my rare visits. But today was different. The first
+          thing I noticed was the red beech tree, which my mother had planted nearly
+          twenty years earlier when we had moved into the new house. I had never
+          remembered it looking quite as vigorous, so full of energy. Today it appeared
+          to have a presence about it which was difficult to ignore. Charisma may be the
+          wrong word, but that was what it felt like. I couldn't resist getting up very
+          close and touching its bark.
         </p>
-        <p>For a second I could have swom I had no hands when I tried to</p>
         <p>
-          — touch it. They appeared to materialise out of thin air. My attention
-          wasdevoted to admiring the strength of its sturdy trunk and the newshoots
-          sprouting from the base of its roots. I was impressed by theirenergy and
-          vitality. How could I never have noticed such life, suchpower?
+          For a second I could have sworn I had no hands when I tried to touch it.
+          They appeared to materialise out of thin air. My attention
+          was devoted to admiring the strength of its sturdy trunk and the new shoots
+          sprouting from the base of its roots. I was impressed by their energy and
+          vitality. How could I never have noticed such life, such power?
         </p>
         <p>
           I touched the leaves. The vibrancy was such that its life forceseeped into my
