--- a/nodejs/mman/nav.html
+++ b/nodejs/mman/nav.html
@@ -126,30 +126,199 @@
             </li>
             <li>
                 <a href="part2.html">PART 2</a>
+                <ol>
+                    <li>Life in other dimensions</li>
+                </ol>
+            </li>
+            <li>
+                <a href="part2.html#ancient-masters">Ancient masters</a>
+                <ol>
+                    <li>
+                        <a href="part2.html#meeting-the-master">Meeting the Master</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#pointers-from-another">Pointers from another dimension </a>
+                    </li>
+                    <li>
+                        <a href="part2.html#the-elusive">The elusive Master</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#final-tests">Final Tests</a>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <a href="part2.html#the-great-dimensional">The great dimensional subdivisions</a>
+            </li>
+            <li>
+                <a href="part2.html#the-lower-dimensions">The lower dimensions: worlds of suffering</a>
+                <ol>
+                    <li>
+                        <a href="part2.html#the-lowest-dimensions">The lowest dimensions</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#a-matter-of-harmony">A matter of harmony and discord </a>
+                    </li>
+                    <li>
+                        <a href="part2.html#desolate-places">Desolate places</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#the-old-man">The old man in the hut</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#escape-from-hell">Escape from hell</a>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <a href="part2.html#the-earth-like">The earth-like dimensions</a>
+                <ol>
+                    <li>
+                        <a href="part2.html#what-is-real">What is real?</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#interview-with-a">Interview with a dead print-worker</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#contacting-the-dead">Contacting the dead</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#do-the-dead-know">Do the dead have supermarkets?</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#do-they-know">Do they know they are dead?</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#tourists-among-the-dead">Tourists among the dead</a>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <a href="part2.html#the-intermediate">The intermediate dimensions:</a>
+                <ol>
+                    <li>
+                        <a href="part2.html#living-the-dream">Living the dream</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#settlers-on-another">Settlers on another planet</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#physical-work-in">Physical work in an nonphysical world</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#sight-seeing-tour">Sight-seeing tour of a big city</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#marriages-made-in">Marriages made in heaven</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#the-art-student">The art student</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#the-art-of-enjoyment">The art of enjoyment</a>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <a href="part2.html#the-higher-dimensions">The higher dimensions</a>
+                <ol>
+                    <li>
+                        <a href="part2.html#heavenly-worlds">Heavenly worlds</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#sublime-environments">Sublime environments</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#the-lady-in-the-blue">The lady in the blue room</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#the-dancing-maiden">The dancing maiden</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#birds-of-paradise">Birds of paradise</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#friendly-people">Friendly people</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#another-universe">Another universe, another world</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#silver-worlds">Silver worlds</a>
+                    </li>
+                    <li>
+                        <a href="part2.html#stairway-to-heaven">Stairway to heaven</a>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <a href="part3.html">PART 3</a>
+                <ol>
+                    <li>The final frontiers</li>
+                </ol>
+            </li>
+            <li>
+                <a href="part3.html#the-final-frontiers">The final frontiers</a>
+                <ol>
+                    <li>
+                        <a href="part3.html#preparing-for-the">Preparing for the ultimate adventure</a>
+                    </li>
+                    <li>
+                        <a href="part3.html#the-final-journey">The final journey</a>
+                    </li>
+                    <li>
+                        <a href="part3.html#thoughts-and-belief">Thoughts and belief systems</a>
+                    </li>
+                    <li>
+                        <a href="part3.html#the-infinite-vistas">The infinite vistas of paradise</a>
+                    </li>
+                    <li>
+                        <a href="part3.html#the-inner-core">The inner core of reality</a>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <a href="part3.html#epilogue">Epilogue</a>
+                <ol>
+                    <li>What is reality?</li>
+                </ol>
+            </li>
+            <li>
+                <a href="appendix.html">Appendix</a>
+                <ol>
+                    <li>
+                        <a href="appendix.html#multidimensional-model">Multidimensional model</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#the-super-powers">The super powers</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#the-power-of-intent">The power of intent</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#the-power-of-expectation">The power of expectation</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#the-power-of-the-subconscious">The power of the subconscious</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#the-power-of-desire">The power of desire</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#the-power-of-consensus">The power of consensus</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#artificial-entities">Artificial entities - man-made lifeforms</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#further-study">Further study and self exploration</a>
+                    </li>
+                    <li>
+                        <a href="appendix.html#recommended-reading">Recommended reading</a>
+                    </li>
+                </ol>
             </li>
         </ol>
     </nav>
 </body>
-
-Life in other dimensions 23Ancient mastersMeeting the Master 79Pointers
-from another dimension 82The elusive Master 83Final Tests 84The great
-dimensional subdivisionsThe lower dimensions: worlds of sufferingThe lowest
-dimensions 93‘Amatter of harmony and discord 94Desolate places 97The old man in
-the hut bdEscape from hell 101The earth-like dimensionsWhats real? 109Interview
-with a dead print-worker M2Contacting the dead SeaDo the dead have supermarkets?
-122Do they know they are dead? 125Tourists among the dead 128The intermediate
-dimensions:Living the dream 136Settlers on another planet 139Physical work in an
-nonphysical world 147Sight-seeing tour of a big city 150Marriages made in heaven
-153The art student 156The art of enjoyment 161The higher dimensionsHeavenly
-worlds 167Sublime environments 170The lady in the blue room 170The dancing
-maiden icsBirds of paradise 173Friendly people 176Another universe, another
-world 178Silver worlds 181Stairway to heaven 184
-<p>PART3The final frontiers 187</p>
-The final frontiersPreparing for the ultimate adventure 191‘The final journey
-193Thoughts and belief systems 198The infinite vistas of paradise 201The inner
-core of reality 204
-<p>EpilogueWhat is reality? 212</p>
-AppendixMultidimensional model 216The super powers 219‘The power of intent 21The
-power of expectation 222The power of the subconscious 222The power of desire
-224The power of consensus 224Artificial entities - man-made lifeforms.
-226Further study and self exploration 229Recommended reading 231
+</html>
