--- a/nodejs/mman/part1.html
+++ b/nodejs/mman/part1.html
@@ -41,76 +41,72 @@
           vitality. How could I never have noticed such life, such power?
         </p>
         <p>
-          I touched the leaves. The vibrancy was such that its life forceseeped into my
+          I touched the leaves. The vibrancy was such that its life force seeped into my
           arm, which almost made me recoil.
         </p>
         <p>
-          Finally I turned away and faced the front door of my mother’shouse. My mind
-          must have missed the few steps I took to get there,although I was incredibly
+          Finally I turned away and faced the front door of my mother’s house. My mind
+          must have missed the few steps I took to get there, although I was incredibly
           lucid and alert. But it didn’t last for long.
         </p>
         <p>
-          Things began to spin. For a moment I felt as if I was drugged. Ibecame dizzy.
+          Things began to spin. For a moment I felt as if I was drugged. I became dizzy.
           With great effort I found my composure by focusing on
-        </p>
-        <p>= the grass in front of me, and clarity returned.</p>
+          the grass in front of me, and clarity returned.</p>
         <p>
-          But then something extraordinary happened. When I lookeddown I discovered with
-          horror that had no legs. I seemed also to haveacquired a second pair of eyes
-          in the back of my head which allowedme three-hundred-and-sixty-degree vision.
-          Fortunately, the next time Ilooked down my body had returned - but only
-          reluctantly, as if to say‘OK, if I must’.
+          But then something extraordinary happened. When I looked down I discovered with
+          horror that had no legs. I seemed also to have acquired a second pair of eyes
+          in the back of my head which allowed me three-hundred-and-sixty-degree vision.
+          Fortunately, the next time I looked down my body had returned - but only
+          reluctantly, as if to say ‘OK, if I must’.
         </p>
         <p>
-          The first thing the mind will do under the circumstances is to finda rational
-          explanation, like amputees will often insist that their limbsare still there
-          because they can still feel them despite all the evidence tothe contrary. In
-          my case it was the opposite: I could see them, but theyappeared to have no
-          reason for being there. That, and the fact that I hadenhanced vision, tossed
-          my mind into confusion and panic. Reason andcommonsense disintegrated.
-          Something so extraordinary washappening to me that there was no possibility of
+          The first thing the mind will do under the circumstances is to find a rational
+          explanation, like amputees will often insist that their limbs are still there
+          because they can still feel them despite all the evidence to the contrary. In
+          my case it was the opposite: I could see them, but they appeared to have no
+          reason for being there. That, and the fact that I had enhanced vision, tossed
+          my mind into confusion and panic. Reason and common sense disintegrated.
+          Something so extraordinary was happening to me that there was no possibility of
           a sensible explanation.
         </p>
         <p>
-          “What am I doing here? Why am I not in my bed at home next tomy wife, eighty
+          “What am I doing here? Why am I not in my bed at home next to my wife, eighty
           miles away? How did I get here?”
         </p>
-        <p>The panic was intense,</p>
+        <p>The panic was intense.</p>
         <p>
-          “How am I going to get back? What will everybody think? Howam I going to
-          explain it to my mother when she finds me here at six inthe morning?”
+          “How am I going to get back? What will everybody think? How am I going to
+          explain it to my mother when she finds me here at six in the morning?”
         </p>
         <p>
-          I needn’t have worried. I felt a rush in my ears and suddenly Iwoke up in my
-          bed next to my wife. But what was it that I had wokenup from?
+          I needn’t have worried. I felt a rush in my ears and suddenly I woke up in my
+          bed next to my wife. But what was it that I had woken up from?
         </p>
         <p>
-          I grabbed Julia and shook her. “Wake up, you'll never believewhat just
+          I grabbed Julia and shook her. “Wake up, you'll never believe what just
           happened.”
         </p>
-        <p>“What?” she said, sleep-drunk and irritated at being disturbed sorudely.</p>
+        <p>“What?” she said, sleep-drunk and irritated at being disturbed so rudely.</p>
         <p>
-          «=p ‘Tve just been to my home town!” I said, half expecting her to sitbolt
+          ‘I've just been to my home town!” I said, half expecting her to sitbolt
           upright and look surprised.
         </p>
         <p>
-          Instead, she mumbled, “You're dreaming - go back to sleep.” Andoff she went,
-          leaving me in a state of turmoil. Even at breakfast Icouldn’t quite convince
-          her. She was open to all sorts of ideas, but shelooked skeptical about this
+          Instead, she mumbled, “You're dreaming - go back to sleep.” And off she went,
+          leaving me in a state of turmoil. Even at breakfast I couldn’t quite convince
+          her. She was open to all sorts of ideas, but she looked skeptical about this
           one.
         </p>
-        <p>Doubting your sanity is a hard thing to do. One moment life is normal,</p>
-        <p>
+        <p>Doubting your sanity is a hard thing to do. One moment life is normal,
           uneventful; then suddenly it falls apart. This is what people report after
           badaccidents or a sudden death. I felt that something was not right in my
           head,
-        </p>
-        <p>
           perhaps something medical. I went to the library before lunch and looked
-          upbrain tumors in the medical section. There was nothing there that I
-          couldrelate to. Next to it was the psychology section - books on dreams, on
-          Freud;but there was no mention of my symptoms. Next to Psychology
-          wasparapsychology and the paranormal. I was determined to work my wayfrom
+          up brain tumors in the medical section. There was nothing there that I
+          could relate to. Next to it was the psychology section - books on dreams, on
+          Freud; but there was no mention of my symptoms. Next to Psychology
+          was parapsychology and the paranormal. I was determined to work my way from
           shelf to shelf in order to find answers. Finally, I read something of—
           ‘Doppelgangers’? and things began to fall into place. Had I known about~ lucid
           dreams it may have saved me some trouble.
