--- a/nodejs/mman/part1.html
+++ b/nodejs/mman/part1.html
@@ -1346,7 +1346,7 @@
       <section class="breakstyle" id="alien-life-forms">
         <h2>Alien life forms and civilizations</h2>
 
-        <h3>Aliens</h3>
+        <h3 id="aliens">Aliens</h3>
         <h4>2nd September 1978</h4>
         <p>
           I was standing in the middle of a wide open field when I becameconscious in my
@@ -1404,7 +1404,7 @@
         </p>
         <p>Had I been saved?</p>
 
-        <h3>Death rays</h3>
+        <h3 id="death-rays">Death rays</h3>
         <h4>11th December 1978</h4>
         <p>
           Three months later I was dreaming about alien creatures from anotherplanet.
