--- a/nodejs/mman/part3.html
+++ b/nodejs/mman/part3.html
@@ -178,10 +178,8 @@
         <p>
           It was that experience in 1972 which made me rediscover meditation asthe way
           forward. For the next eight years I stuck to a strict regime in order to
-        </p>
-        <p>
-          -< unearth similar experiences. All I wanted was the simple truth of who I am
-          -the truth behind appearances; to find out what reality was, untainted
+          unearth similar experiences. All I wanted was the simple truth of who I am
+          the truth behind appearances; to find out what reality was, untainted
           byperception, conditioning and opinion. This had always ranked as the
           numberone goal of my journey through life. Out-of-the-body experiences were
           like akind of sideshow - perks that came with the job. Ironically, I had
